Use include instead of import
This has the advantage that I can compile one chapter at a time.

--- a/FrontBackmatter/Abstract.tex
+++ b/FrontBackmatter/Abstract.tex
@@ -31,7 +31,7 @@ which satisfy certain given statistics.
 These target labels can be used to train any likelihood-based model.
 The second approach deals with strong spurious correlations in the training data,
 which can be seen as a specific form of sampling bias.
-A bias-free partially-labeled context set is used to learn an interpretable representation of the data
+A bias-free partially-labelled context set is used to learn an interpretable representation of the data
 which is invariant to the spurious correlation and can be assessed qualitatively.
 The third approach deals with less extreme cases of sampling bias,
 but relaxes the assumption of having any labels in the context set
