--- a/paper2/1-introduction.tex
+++ b/paper2/1-introduction.tex
@@ -116,17 +116,17 @@ with guarantees of the non-spurious information being preserved.
 \begin{figure*}[tb]
   \centering
   \subfloat[Original images.]{%
-      \scalebox{0.3}{\includegraphics[width=\textwidth]{./Images/celeba/train_original_x_2.png}}%
+      \scalebox{0.3}{\includegraphics[width=\textwidth]{paper2/Images/celeba/train_original_x_2.png}}%
       \label{fig:cflow_celeba_original_x}
   }
   \hfill
   \subfloat[$\bm{x}_u$ null-samples from the cFlow model.]{%
-      \scalebox{0.3}{\includegraphics[width=\textwidth]{./Images/celeba/train_reconstruction_y_2.png}}%
+      \scalebox{0.3}{\includegraphics[width=\textwidth]{paper2/Images/celeba/train_reconstruction_y_2.png}}%
       \label{fig:cflow_celeba_recon_y}
   }
   \hfill
   \subfloat[$\bm{x}_b$ null-samples from the cFlow model.]{%
-      \scalebox{0.3}{\includegraphics[width=\textwidth]{./Images/celeba/train_reconstruction_s_2.png}}%
+      \scalebox{0.3}{\includegraphics[width=\textwidth]{paper2/Images/celeba/train_reconstruction_s_2.png}}%
       \label{fig:cflow_celeba_recon_s}
   }
   \caption{
