--- a/paper2/2-related-work.tex
+++ b/paper2/2-related-work.tex
@@ -1,7 +1,7 @@
 \begin{figure*}[!htb]
     \centering
     \subfloat[Samples from the cMNIST training set, $\sigma=0$.]{%
-        \scalebox{0.3}{\includegraphics[width=\textwidth]{./Images/cmnist/cflow_original_task_x_scale_0.png}}%
+        \scalebox{0.3}{\includegraphics[width=\textwidth]{paper2/Images/cmnist/cflow_original_task_x_scale_0.png}}%
         \label{fig:cflow_cmnist_task_train}
     }
     % \hfill
@@ -11,12 +11,12 @@
     % }
     \hfill
     \subfloat[$x_u$ null-samples from the cFlow model.]{%
-        \scalebox{0.3}{\includegraphics[width=\textwidth]{./Images/cmnist/cflow_task_xy_scale_0.png}}%
+        \scalebox{0.3}{\includegraphics[width=\textwidth]{paper2/Images/cmnist/cflow_task_xy_scale_0.png}}%
         \label{fig:cflow_cmnist_y}
     }
     \hfill
     \subfloat[$x_b$ null-samples from the cFlow model.]{%
-        \scalebox{0.3}{\includegraphics[width=\textwidth]{./Images/cmnist/cflow_task_xs_scale_0.png}}%
+        \scalebox{0.3}{\includegraphics[width=\textwidth]{paper2/Images/cmnist/cflow_task_xs_scale_0.png}}%
         \label{fig:cflow_cmnist_s}
     }
     \caption{
