--- a/paper2/3-method.tex
+++ b/paper2/3-method.tex
@@ -1,7 +1,7 @@
 \section{Interpretable Invariances by Null-Sampling}\label{ssec:general}
 % \begin{figure}
 %     \centering
-%     \includegraphics[width=0.4\textwidth]{./Figures/diagram.pdf}
+%     \includegraphics[width=0.4\textwidth]{paper2/Figures/diagram.pdf}
 %     \caption{Training procedure using the cFlow model for illustrative purposes.}%
 %     \label{fig:training_diagram}
 % \end{figure}
@@ -9,12 +9,12 @@
     \centering
     \hfill
     \subfloat[cFlow model.]{%
-        \scalebox{0.33}{\includegraphics[width=\textwidth]{./Figures/inn_diagram_u.pdf}}%
+        \scalebox{0.33}{\includegraphics[width=\textwidth]{paper2/Figures/inn_diagram_u.pdf}}%
         \label{fig:inn_diagram}
     }
     \hfill
     \subfloat[cVAE model.]{%
-        \scalebox{0.4}{\includegraphics[width=\textwidth]{./Figures/cvae_diagram_u.pdf}}%
+        \scalebox{0.4}{\includegraphics[width=\textwidth]{paper2/Figures/cvae_diagram_u.pdf}}%
         \label{fig:cvae_diagram}
     }
     \hfill
