--- a/paper2/paper2.tex
+++ b/paper2/paper2.tex
@@ -1,3 +1,4 @@
+\chapter{Paper 2: Null-sampling for Interpretable and Fair Representations}\label{ch:paper2}
 % \documentclass[runningheads]{llncs}
 % \pdfoutput=1
 % \usepackage[utf8]{inputenc}
@@ -69,18 +70,18 @@ We show the effectiveness of our method on both image and tabular datasets: Colo
 % We first demonstrate the viability of our  No Shortcuts in Neural Network (NoSiNN) framework with a AutoEncoder model before showing how its drawbacks can be ameliorated through the use of an Invertible architecture.
 % Experiments with face images, coloured digits, and census data show promising results in decorrelating the spurious and non-spurious semantic features.
 
-\input{1-introduction.tex}
-\input{2-related-work.tex}
-\input{3-method.tex}
-\input{4-experiments.tex}
-\input{5-conclusion.tex}
+\input{paper2/1-introduction.tex}
+\input{paper2/2-related-work.tex}
+\input{paper2/3-method.tex}
+\input{paper2/4-experiments.tex}
+\input{paper2/5-conclusion.tex}
 
 \section*{Acknowledgements}
 This work was in part funded by the European Research Council 
 under the ERC grant agreement no. 851538.
 We are grateful to NVIDIA for donating GPUs.
 
-\input{appendix.tex}
+\input{paper2/appendix.tex}
 % \FloatBarrier%
 % \clearpage
 
